fix: fix component_portal view line first child margin top issue (now is aligned with vertical position of other components like input text)

--- a/core/component_portal/css/view_line_portal.less
+++ b/core/component_portal/css/view_line_portal.less
@@ -19,6 +19,10 @@
 		// section_record list
 		.section_record {
 
+			&:first-child {
+		  		margin-top: 0.42rem;
+			}
+
 			// column
 			.column {
 				height: inherit;
